--- a/Css/menu.css
+++ b/Css/menu.css
@@ -14,7 +14,6 @@
 /*###########################################################################################################*/
 #menuHeader{
     font-size: 14px;
-    font-weight: bold;
     font-family: 'Cabin', sans-serif;
 }
 #menuHeader .row li a{
@@ -41,6 +40,7 @@ header .row ul li .callbigButton:active{
      padding: 0px 13px 15px 10px;
      margin-bottom: 0px;
      z-index: 12;
+     border: none;
  }
 
 #navbar .container-fluid li a{
@@ -190,7 +190,6 @@ header .row .social-buttons li i{
 }
 
 #menu .collapsible{
-  border-radius: 20px;
   background-color: rgb(121,21,13);
   color: white;
   cursor: pointer;
@@ -225,7 +224,6 @@ header .row .social-buttons li i{
   background-color: darkred;
   background-image: linear-gradient(to right,#494e54,#c9392e);
   color: yellow;
-  margin-bottom: 9px;
 }
 
 #menu .row .content p{
@@ -355,6 +353,7 @@ header .row .social-buttons li i{
     font-weight: bold;
     margin-bottom: 8px;
     transition: .2s opacity;
+    border: none;
 }
 .addToCart:hover{
     cursor: pointer;
@@ -411,7 +410,8 @@ header .row .social-buttons li i{
 /*Contact Section Starts Here*/
 /*###########################################################################################################*/
 section#contact {
-  padding-top: 30px;
+ padding-top: 0px;
+ margin-top: 0px;
   padding-bottom: 40px;
   background-image: url('../image/Contact/tajbg.png');
   background-color: #D2A360;
@@ -481,6 +481,7 @@ section#contact .text-danger {
 }
 
 #contact .row form .col-lg-12 button{
+    border: none;
     color: white;
     background-color: rgb(121,21,13);
     border-color: #fff;
@@ -566,6 +567,7 @@ footer .social-buttonsf a:hover{
   color: white;
   text-align: center;
   font-size: 30px; 
+  border-radius: 0px;
 }
 #placeOrder button span:not(.animation-counter){
     display: none;
@@ -639,6 +641,8 @@ footer .social-buttonsf a:hover{
     text-align: center;
 }
 #parralaxaside .center h1{
+    margin-bottom: 0px;
+    margin-top: 0px;
     font-size: 60px;
     font-family: 'Tangerine', cursive;
 }
@@ -665,7 +669,7 @@ footer .social-buttonsf a:hover{
 }
 
 #filterBtn i{
-    padding: 6px;
+    padding: 9px 6px;
 }
 
 section#category-panel{
@@ -720,10 +724,10 @@ hr {
 
 .image-card{
     font-family: 'Cabin', sans-serif;
-    margin-left: 6px;
-    margin-bottom: 9px;
+    margin-left: 8px;
+    margin-bottom: 6px;
     position: relative;
-    width: 400px;
+    width: 360px;
     height: 450px;
     overflow: hidden;
     border-radius: 3px;
@@ -739,7 +743,7 @@ hr {
     content: '';
     position: absolute;
     height: 100%;
-    width: 90%;
+    width: 100%;
     background: rgba(255,255,255,.1);
     z-index: 1;
     transform: skew(45deg);
@@ -817,7 +821,6 @@ hr {
     transform-origin: left;
     transform: perspective(800px) rotateY(90deg);
     transition: all.5s;
-    border: 1px solid #fff;
 }
 .image-card:hover ul li:nth-child(1) {
     transition-delay: .2s;
@@ -852,7 +855,7 @@ hr {
     list-style: none;
     position: absolute;
     top: 270px;
-    left: 40px;
+    left: 37px;
 }
 .image-card #holiday li{
     margin-left: 36px;
@@ -861,7 +864,6 @@ hr {
     cursor: pointer;
     line-height: 40px;
     background-color: darkred;
-    border: 1px solid #fff;
 }
 .image-card:hover #holiday li:nth-child(1) {
     transition-delay: .8s;
