--- a/Css/menu.css
+++ b/Css/menu.css
@@ -370,7 +370,7 @@ header .row .social-buttons li i{
 /*Parrlax Starts*/
 /*###########################################################################################################*/
 .parallax {
-  height: auto;
+  height: 350px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
