--- a/Css/menu.css
+++ b/Css/menu.css
@@ -371,7 +371,7 @@ header .row .social-buttons li i{
 /*###########################################################################################################*/
 .parallax {
   height: 350px;
-  background-attachment: fixed;
+  background: fixed;
   background-repeat: no-repeat;
  background-size: cover;
 }
