--- a/Css/menu.css
+++ b/Css/menu.css
@@ -373,17 +373,10 @@ header .row .social-buttons li i{
   height: 350px;
   background-repeat: no-repeat;
  background-size: cover;
+ background: fixed;
+ height: 100%;
 }
-@media only screen and (max-device-width : 768px) { 
-  .parallax{
- background-attachment:scroll !important;
-    background-size: cover;
-    height: 100%;
-    overflow: hidden;
-  
-}
-}
-}
+
  .parallax .center{
     width: 100%;
     font-weight: bolder;
