--- a/Css/menu.css
+++ b/Css/menu.css
@@ -374,7 +374,7 @@ header .row .social-buttons li i{
   background-repeat: no-repeat;
  background-size: cover;
  background: fixed;
- height: 100%;
+ height: 500px;
 }
 
  .parallax .center{
